<resources>
    <string name="app_name">DrinkWithMe</string>
    <string name="enter_data_title">Please enter your data:</string>
    <string name="weight_label_text">Weight</string>
    <string name="enter_weight_hint">Enter your weight</string>
    <string name="kilogram_label_text">kg</string>
    <string name="height_label_text">Height:</string>
    <string name="centimeter_label_text">cm</string>
    <string name="enter_height_hint">Enter your height</string>
    <string name="gender_label_text">Gender:</string>
    <string name="enter_gender_hint">Enter your gender</string>
    <string name="done_text">Done</string>
    <string name="drink_text">Drink!</string>
    <string name="test_text">Test</string>
    <string name="advise_text">Predict</string>
    <string name="drink_name">Drink Name</string>
    <string name="alcohol_default">%d %%</string>
    <string name="ppm_default">%.2f %%</string>
    <string name="volume_label_text">"I will drink: "</string>
    <string name="milliliter_label_text">ml</string>
    <string name="enter_volume_hint">Enter volume</string>
    <string name="continue_text">Continue</string>
    <string name="start_text">Press anywhere to start…</string>
    <string name="end_text">Press anywhere to continue…</string>
    <string name="reset_text">Reset</string>
    <string name="search_title">Search</string>
    <string name="history">History</string>
    <string name="time">Time</string>
    <string name="choose_the_test">Choose the test</string>
    <string name="circles">Circles</string>
    <string name="arithmetic">Arithmetic</string>
    <string name="game_score">Score: %d</string>
    <string name="nothing">Nothing</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="red">#FF0000</color>
    <color name="green">#00FF00</color>

</resources>
