<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.drinkwithme.viewModel.PersonalDataViewModel" />

        <variable
            name="listener"
            type="com.example.drinkwithme.handlers.IPersonalDataListener" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.PersonalDataFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/personal_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/enter_data_title"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personal_label">

                <TextView
                    android:id="@+id/weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:enabled="false"
                    android:text="@string/weight_label_text"
                    android:textSize="18sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/weight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:hint="@string/enter_weight_hint"
                    android:inputType="numberDecimal"
                    android:text="@={data.mWeight}"
                    app:layout_constraintBottom_toBottomOf="@+id/weight_label"
                    app:layout_constraintStart_toEndOf="@+id/weight_label" />

                <TextView
                    android:id="@+id/kilogram_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/kilogram_label_text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/weight_text"
                    app:layout_constraintStart_toEndOf="@+id/weight_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/height_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:enabled="false"
                    android:text="@string/height_label_text"
                    android:textSize="18sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/height_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:hint="@string/enter_height_hint"
                    android:inputType="number"
                    android:text="@={data.mHeight}"
                    app:layout_constraintBottom_toBottomOf="@+id/height_label"
                    app:layout_constraintStart_toEndOf="@+id/height_label" />

                <TextView
                    android:id="@+id/centimeter_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/centimeter_label_text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/height_text"
                    app:layout_constraintStart_toEndOf="@+id/height_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:enabled="false"
                    android:text="@string/gender_label_text"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:hint="@string/enter_gender_hint"
                    android:inputType="numberDecimal"
                    android:selectedItemPosition="@={data.mGenderPosition}"
                    app:layout_constraintBottom_toBottomOf="@+id/height_label"
                    app:layout_constraintStart_toEndOf="@+id/height_label" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:onClick="@{listener::onDone}"
                android:text="@string/done_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>