<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/drinkHistoryImage_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/drink_name" />

        <TextView
            android:id="@+id/drinkHistoryName_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/drink_name"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/drinkHistoryImage_view"
            app:layout_constraintTop_toTopOf="@+id/drinkHistoryImage_view" />

        <TextView
            android:id="@+id/drinkHistoryTime_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            app:layout_constraintStart_toEndOf="@+id/drinkHistoryImage_view"
            app:layout_constraintTop_toBottomOf="@+id/drinkHistoryName_text" />

        <TextView
            android:id="@+id/historyPpm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/alcohol_default"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/drinkHistoryImage_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>